chore: update sqlc version to v1.29.0 and modify related generated files
