# db/sqlc/models.go
@@ -1,6 +1,6 @@
 // Code generated by sqlc. DO NOT EDIT.
 // versions:
-//   sqlc v1.28.0
+//   sqlc v1.29.0
 
 package sqlc
 
@@ -153,6 +153,14 @@ type Users struct {
 	Nationality         string      `json:"nationality"`
 	ResidentialCountry  pgtype.Text `json:"residential_country"`
 	JobRole             pgtype.Text `json:"job_role"`
+	CompanyName         pgtype.Text `json:"company_name"`
+	CompanyAddress      pgtype.Text `json:"company_address"`
+	CompanyCity         pgtype.Text `json:"company_city"`
+	CompanyPostalCode   pgtype.Text `json:"company_postal_code"`
+	CompanyCountry      pgtype.Text `json:"company_country"`
+	EmployeeType        pgtype.Text `json:"employee_type"`
+	AuthProvider        pgtype.Text `json:"auth_provider"`
+	ProviderID          pgtype.Text `json:"provider_id"`
 	CompanyWebsite      pgtype.Text `json:"company_website"`
 	EmploymentType      pgtype.Text `json:"employment_type"`
 	CreatedAt           time.Time   `json:"created_at"`
